Last push for Paper's studies

--- a/notebook/misc/Process_Tweets.ipynb
+++ b/notebook/misc/Process_Tweets.ipynb
@@ -6,19 +6,14 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/javascript": [
-       "IPython.notebook.set_autosave_interval(3600000)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Autosaving every 3600 seconds\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'plotly'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-1-3059fb1a9c1d>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mmatplotlib\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpyplot\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0mplt\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[1;32mfrom\u001B[0m \u001B[0mmatplotlib\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpyplot\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mfigure\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 6\u001B[1;33m \u001B[1;32mimport\u001B[0m \u001B[0mplotly\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mgraph_objects\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0mgo\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      7\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      8\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mdatetime\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'plotly'"
      ]
     }
    ],
@@ -4501,6 +4496,578 @@
    "source": [
     "sage_good_bad_ = pd.read_csv(path_sage, lineterminator=\"\\n\")\n",
     "sage_good_bad_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# For Misinfo Exposure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_screen_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>angrynationalis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>IFilonczuk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CharismaAlasta1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Dorunda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ajividen73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153547</th>\n",
+       "      <td>MorrisJanie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153548</th>\n",
+       "      <td>Schypha</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153549</th>\n",
+       "      <td>chadlipscomb2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153550</th>\n",
+       "      <td>Micki82538979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153551</th>\n",
+       "      <td>GraphSniper</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>153552 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       user_screen_name\n",
+       "0       angrynationalis\n",
+       "1            IFilonczuk\n",
+       "2       CharismaAlasta1\n",
+       "3               Dorunda\n",
+       "4            ajividen73\n",
+       "...                 ...\n",
+       "153547      MorrisJanie\n",
+       "153548          Schypha\n",
+       "153549    chadlipscomb2\n",
+       "153550    Micki82538979\n",
+       "153551      GraphSniper\n",
+       "\n",
+       "[153552 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "rt_bad = pd.read_csv(\"F:/Supsi/COVID-19-Tweets/large_files/ccdh/rt_bad.csv\")\n",
+    "rt_bad = rt_bad[[\"user_screen_name\"]]\n",
+    "rt_bad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_screen_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MukherjeeDina</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>YayDonovan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>liaxhyo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Myriam_Sidibe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>romyfeghali</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495</th>\n",
+       "      <td>themintmag</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>iomegadrive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>auspisabundance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498</th>\n",
+       "      <td>gorgeous_manon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>rodrigobarnes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>500 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    user_screen_name\n",
+       "0      MukherjeeDina\n",
+       "1         YayDonovan\n",
+       "2            liaxhyo\n",
+       "3      Myriam_Sidibe\n",
+       "4        romyfeghali\n",
+       "..               ...\n",
+       "495       themintmag\n",
+       "496      iomegadrive\n",
+       "497  auspisabundance\n",
+       "498   gorgeous_manon\n",
+       "499    rodrigobarnes\n",
+       "\n",
+       "[500 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "good_scored = pd.read_csv(\"C:/Users/gianl/Desktop/Gi/Supsi/TwitterTransparencyData/input_files/sample_good_found.csv\")\n",
+    "gs = good_scored[[\"user_screen_name\"]]\n",
+    "gs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>screen_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>changecadet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>reneeg1147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>acie_hh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>em1692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>kinsellawarren</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203383</th>\n",
+       "      <td>HostofGolden</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203384</th>\n",
+       "      <td>rob_bravo2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203385</th>\n",
+       "      <td>twentee7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203386</th>\n",
+       "      <td>ttaryn96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203387</th>\n",
+       "      <td>clickcoastal1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>203388 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           screen_name\n",
+       "0          changecadet\n",
+       "1           reneeg1147\n",
+       "2              acie_hh\n",
+       "3               em1692\n",
+       "4       kinsellawarren\n",
+       "...                ...\n",
+       "203383    HostofGolden\n",
+       "203384      rob_bravo2\n",
+       "203385        twentee7\n",
+       "203386        ttaryn96\n",
+       "203387   clickcoastal1\n",
+       "\n",
+       "[203388 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rt_good = pd.read_csv(\"F:/Supsi/COVID-19-Tweets/large_files/ccdh/rt_good.csv\")\n",
+    "rt_good"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = rt_good.head(1002).merge(gs, left_on=\"screen_name\", right_on=\"user_screen_name\", how=\"left\")\n",
+    "x = x[x[\"user_screen_name\"].isna()]\n",
+    "x = x[[\"screen_name\"]]\n",
+    "x.to_csv(\"C:/Users/gianl/Desktop/Gi/Supsi/TwitterTransparencyData/input_files/sample_good_1000.csv\",\n",
+    "        line_terminator=\"\\n\", encoding=\"utf-8\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = rt_good.head(1500).merge(gs, left_on=\"screen_name\", right_on=\"user_screen_name\", how=\"left\")\n",
+    "x = x[x[\"user_screen_name\"].isna()]\n",
+    "x = x[[\"screen_name\"]]\n",
+    "f = x[1098:1132]\n",
+    "# f.to_csv(\"C:/Users/gianl/Desktop/Gi/Supsi/TwitterTransparencyData/input_files/sample_good_32.csv\",\n",
+    "#         line_terminator=\"\\n\", encoding=\"utf-8\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>screen_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1100</th>\n",
+       "      <td>maslowsneeds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1101</th>\n",
+       "      <td>ohnolny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1102</th>\n",
+       "      <td>RDalDegan9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1103</th>\n",
+       "      <td>EdWard40100035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1104</th>\n",
+       "      <td>EllenEmmerich</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1105</th>\n",
+       "      <td>bpowers632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1106</th>\n",
+       "      <td>HomieBoobooo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1107</th>\n",
+       "      <td>Aeriqui</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1108</th>\n",
+       "      <td>ABokazhanova</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1109</th>\n",
+       "      <td>veriteetliberte</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1110</th>\n",
+       "      <td>EliSennesh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1111</th>\n",
+       "      <td>dikili</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1112</th>\n",
+       "      <td>ACE646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1113</th>\n",
+       "      <td>daphne_parkin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1114</th>\n",
+       "      <td>misterdickson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1115</th>\n",
+       "      <td>katieKeys17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1116</th>\n",
+       "      <td>qayzr_</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1117</th>\n",
+       "      <td>scowv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1118</th>\n",
+       "      <td>kennedyshamala</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1119</th>\n",
+       "      <td>cafemyheart</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1120</th>\n",
+       "      <td>schnzrmom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1121</th>\n",
+       "      <td>SueWyss1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1122</th>\n",
+       "      <td>abu_remaileh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1123</th>\n",
+       "      <td>01Yuusuke</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1124</th>\n",
+       "      <td>TheGittens</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1125</th>\n",
+       "      <td>cdengel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1126</th>\n",
+       "      <td>krthiak</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1127</th>\n",
+       "      <td>kmsmulhall</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1128</th>\n",
+       "      <td>SquadronLrd_JMH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1129</th>\n",
+       "      <td>carriefarmer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1130</th>\n",
+       "      <td>saludntutrabajo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1131</th>\n",
+       "      <td>SimonSidleman</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1132</th>\n",
+       "      <td>Sadickkkk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1133</th>\n",
+       "      <td>ekochidd</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          screen_name\n",
+       "1100     maslowsneeds\n",
+       "1101          ohnolny\n",
+       "1102       RDalDegan9\n",
+       "1103   EdWard40100035\n",
+       "1104    EllenEmmerich\n",
+       "1105       bpowers632\n",
+       "1106     HomieBoobooo\n",
+       "1107          Aeriqui\n",
+       "1108     ABokazhanova\n",
+       "1109  veriteetliberte\n",
+       "1110       EliSennesh\n",
+       "1111           dikili\n",
+       "1112           ACE646\n",
+       "1113    daphne_parkin\n",
+       "1114    misterdickson\n",
+       "1115      katieKeys17\n",
+       "1116           qayzr_\n",
+       "1117            scowv\n",
+       "1118   kennedyshamala\n",
+       "1119      cafemyheart\n",
+       "1120        schnzrmom\n",
+       "1121         SueWyss1\n",
+       "1122     abu_remaileh\n",
+       "1123        01Yuusuke\n",
+       "1124       TheGittens\n",
+       "1125          cdengel\n",
+       "1126          krthiak\n",
+       "1127       kmsmulhall\n",
+       "1128  SquadronLrd_JMH\n",
+       "1129     carriefarmer\n",
+       "1130  saludntutrabajo\n",
+       "1131    SimonSidleman\n",
+       "1132        Sadickkkk\n",
+       "1133         ekochidd"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
    ]
   },
   {
