--- a/notebook/network/Retweet_Network.ipynb
+++ b/notebook/network/Retweet_Network.ipynb
@@ -270,14 +270,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:  35.0357779\n"
+      "Time:  37.97987\n"
      ]
     }
    ],
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,13 +1276,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2     48402\n",
+       "1      7156\n",
+       "10     3735\n",
+       "0      2782\n",
+       "23     2021\n",
+       "19     1619\n",
+       "5      1600\n",
+       "7      1155\n",
+       "6      1151\n",
+       "11      702\n",
+       "16      557\n",
+       "21      536\n",
+       "32      342\n",
+       "25      284\n",
+       "9       234\n",
+       "48      209\n",
+       "27      199\n",
+       "4       134\n",
+       "14       99\n",
+       "83       96\n",
+       "Name: Communiity, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "pd.Series(ccdh_rt_w_comm[\"Communiity\"]).value_counts().sort_values(ascending=False)[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1     113490\n",
+       "2      34942\n",
+       "10     24994\n",
+       "5       7386\n",
+       "19      5203\n",
+       "0       4400\n",
+       "6       2766\n",
+       "16      2495\n",
+       "23      1259\n",
+       "9        961\n",
+       "11       862\n",
+       "7        719\n",
+       "14       540\n",
+       "3        506\n",
+       "27       442\n",
+       "83       426\n",
+       "25       253\n",
+       "30       245\n",
+       "4        196\n",
+       "12       184\n",
+       "Name: Communiity, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(good_rt_w_comm[\"Communiity\"]).value_counts().sort_values(ascending=False)[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1f2f4b44e9449528e878c7f2276c890",
+       "model_id": "fd8488946823456482c345569707f4af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1297,9 +1378,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "12513502\n",
-      "12513502\n"
+      "\n"
      ]
     },
     {
@@ -1405,7 +1484,7 @@
        "[12513502 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1493,7 @@
     "names = []\n",
     "communities = []\n",
     "for i in tqdm(louvain):\n",
-    "    communities.append(louvain.get(i))\n",
+    "    communities.append(louvain.get(i))5\n",
     "    names.append(i)\n",
     "df_network = pd.DataFrame(list(zip(names, communities)), columns=[\"Name\", \"Communiity\"])\n",
     "df_network"
@@ -1422,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1432,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1638,7 @@
        "[277619 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1577,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1588,119 +1667,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Community</th>\n",
-       "      <th>Good</th>\n",
-       "      <th>Bad</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>113490</td>\n",
-       "      <td>7156</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>34942</td>\n",
-       "      <td>48402</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>7386</td>\n",
-       "      <td>1600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>4400</td>\n",
-       "      <td>2782</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>2766</td>\n",
-       "      <td>1151</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>961</td>\n",
-       "      <td>234</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>719</td>\n",
-       "      <td>1155</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>506</td>\n",
-       "      <td>91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>196</td>\n",
-       "      <td>134</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>170</td>\n",
-       "      <td>87</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Community    Good    Bad\n",
-       "1          1  113490   7156\n",
-       "2          2   34942  48402\n",
-       "5          5    7386   1600\n",
-       "0          0    4400   2782\n",
-       "6          6    2766   1151\n",
-       "9          9     961    234\n",
-       "7          7     719   1155\n",
-       "3          3     506     91\n",
-       "4          4     196    134\n",
-       "8          8     170     87"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df_distrib_follower' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-78a790f4390f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf_distrib_follower\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_distrib_follower' is not defined"
+     ]
     }
    ],
    "source": [
