--- a/notebook/dozen/Good_users.ipynb
+++ b/notebook/dozen/Good_users.ipynb
@@ -2736,7 +2736,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
